feat: refactor spell compendium to use central json

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -4,321 +4,6 @@ description: "A list of Aggressive Combat spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Sandstorm
-<Spell
-    author='Lyrellion'
-    glyphs={["arc_projectile", "wall", "sensitive", "propagate_homing", "split", "split", "split", "conjure_terrain", "crush"]}
-    description='Fires volleys of sand in the direction you face, burying enemies. Requires Focus of Block Shaping.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Bladestorm
-<Spell
-    author='Lyrellion'
-    glyphs={["self", "orbit", "aoe", "accelerate", "split", "split", "cut", "delay", "cut", "amplify"]}
-    description='Creates a whirling ring of projectiles that damage anything that comes near.'
-    versions={["1.20.1"]}
-/>
-
-## Reverse Gravity
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "launch", "amplify", "wind_shear", "launch", "amplify", "delay", "gravity", "amplify"]}
-    description='Launch an enemy into the air then slam them down for massive damage.'
-    versions={["1.20.1"]}
-/>
-
-## Prismatic Barrage
-<Spell
-    author='Lyrellion'
-    glyphs={["touch", "sensitive", "wall", "sensitive", "phantom_block", "duration_down", "duration_down", "leap", "amplify", "amplify"]}
-    description='Fire volleys of blocks at enemies that disappear after a short time. Set spell color to rainbow. Requires Focus of Block Shaping.'
-    versions={["1.20.1"]}
-/>
-
-## Witchbolt
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "harm", "dispel"]}
-    description='For gathering Wixie tokens. Damages a witch then attempts to dispel her for the token. Will not work well with Ars Scalaes.'
-    versions={["1.20.1"]}
-/>
-
-## Omnislash
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "hex", "cut", "amplify", "delay", "cut", "amplify", "delay", "cut", "amplify"]}
-    description='Deals multiple instances of slashing damage to an enemy.'
-    versions={["1.20.1"]}
-/>
-
-## Arcane Missile
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "accelerate", "hex", "harm", "delay", "harm", "delay", "harm", "delay", "harm"]}
-    description='Basic ranged damage spell. Using delay to cause extra damage once triggering a players immunity-frames.'
-    versions={["1.20.1", "1.19.2"]}
-/>
-
-## Decay
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "wither", "amplify", "amplify", "amplify", "hex", "amplify", "amplify", "amplify", "amplify"]}
-    description='Deals heavy damage and negates healing.'
-    versions={["1.20.1"]}
-/>
-
-## Cloudkill
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "linger", "sensitive", "aoe", "aoe", "aoe", "propagate_arc", "envenom", "poison_spores", "amplify"]}
-    description='Create a poisonous cloud that deals damage to entities in the area.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Bury
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "intangible", "amplify", "aoe", "aoe", "aoe", "pierce", "pierce", "duration_down"]}
-    description="Fire at the ground beneath an enemy's feet to cause them to fall into the terrain and rapidly be encased in it causing suffocation."
-    versions={["1.20.1"]}
-/>
-
-## Ice Storm
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "wall", "sensitive", "propagate_arc", "freeze", "cold_snap", "amplify", "cold_snap", "amplify", "amplify"]}
-    description='Deal heavy cold damage to a target and surrounding enemies.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Chain Lightning
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "wall", "sensitive", "propagate_homing", "split", "split", "lightning", "heal", "dampen"]}
-    description='Cause multiple volleys of lightning to strike a target and surrounding entities for MASSIVE damage. Pair with a Kindling and/or Shocking thread for best results.'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Spike Growth
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "chain", "aoe", "aoe", "aoe", "spike", "amplify", "amplify", "extend_time", "extend_time"]}
-    description='Deal heavy earth damage to all ground based enemies in a fairly wide area.'
-    addons={["elemental", "tmg", "neg"]}
-    versions={["1.20.1"]}
-/>
-
-## Zap
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "hex", "spark", "discharge", "delay", "spark", "discharge", "delay", "spark", "discharge"]}
-    description='Deals heavy lightning damage to a single target and moderate damage to nearby enemies.'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Cutting Winds
-<Spell
-    author='Lyrellion'
-    glyphs={["homing_projectile", "accelerate", "wind_shear", "amplify", "amplify", "delay", "wind_shear", "amplify", "amplify"]}
-    description='Deal Heavy damage to airborne enemies (like the Ender Dragon).'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Catapult
-<Spell
-    author='Lyrellion'
-    glyphs={["touch", "sensitive", "conjure_terrain", "amplify", "leap", "amplify", "amplify", "amplify", "break", "pickup"]}
-    description='Summon a block of stone to hurl at an enemy.'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Collapsing Stars
-<Spell
-    author='Clement446'
-    glyphs={["projectile","burst","aoe","aoe","sensitive","propagate_homing","ignite","flare","amplify","heal"]}
-    description='Creates a swarm of projectiles around the enemy, dealing heavy Fire damage with the "Hellfire" effect.
-
-⚠Requires either the Kindling Thread at tier three, or the Fire Focus, depending on the Ars Elemental version ⚠'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Arcane Scar
-<Spell
-    author='Danicus'
-    glyphs={["projectile","wither","amplify","amplify","extend_time","hex","amplify","amplify","amplify","extend_time"]}
-    description='Marks the target with wicked magic, consuming its life and making it vulnerable to subsequent spells.'
-    versions={["1.20.1"]}
-/>
-
-## Harm Cannon
-<Spell
-    author='Lava'
-    glyphs={["overhead","burst","sensitive","chain","propagate_homing","hex","harm","amplify","heal"]}
-    description='Tier 3 Thread of kindling required. Does massive damage wherever the caster aims.'
-    versions={["1.20.1","1.19.2"]}
-    addons={["tmg","neg","elemental","trinkets"]}
-/>
-
-## Aggressive Wall
-<Spell
-    author='Danicus'
-    glyphs={["touch","sensitive","phantom_block","aoe","aoe","duration_down","leap","amplify","amplify"]}
-    description='With the help of Focus of Block Shaping, you summon a wall of mageblocks and throw it hard forward, knocking down those it hits.'
-    versions={["1.20.1"]}
-/>
-
-## GOAT Lightning
-<Spell
-    author='Xacris'
-    glyphs={["projectile","linger","sensitive","aoe","aoe","aoe","aoe","aoe","aoe","lightning"]}
-    description='The original flashy lingering lightning spell of doom! Not the highest damage, but certainly sends a message'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Orb of Obliteration
-<Spell
-    author='Danicus'
-    glyphs={["projectile","burst","sensitive","aoe","aoe","explosion","amplify","aoe","aoe","aoe"]}
-    description='An orb that at the point of impact will devastate everything around it, throwing whatever survives into the air.'
-    versions={["1.20.1"]}
-/>
-
-## Classical Chained Lightning
-<Spell
-    author='Clement446'
-    glyphs={["ray","chain","amplify","burst","aoe","aoe","sensitive","lightning","amplify","amplify"]}
-    description="Creates explosions of lightning strikes at targets (also affects blocks)
-
-Chaining can be removed, but it will loose it's large AOE."
-    versions={["1.20.1"]}
-    addons={["tmg","neg"]}
-/>
-
-## Enhanced Bladestorm
-<Spell
-    author='Clement446'
-    glyphs={["aura","amplify","aoe","aoe","not_self","chain","burst","air_sword","amplify","amplify"]}
-    description='Creates an area of effect around you that will attack enemies with powerful air swords.'
-    versions={["1.20.1","1.19.2"]}
-    addons={["trinkets","tmg","neg"]}
-/>
-
-## Kamikaze Bomber
-<Spell
-    author='72Mansion'
-    glyphs={["orbit","split","split","split","split","explosion","aoe","aoe","aoe","aoe"]}
-    description='Any entity that touches one of your orbiting projectiles triggers an explosion with a decent AoE. You can remove splits from the orbit to add AoE for the explosion.'
-    versions={["1.20.1"]}
-/>
-
-## Thundering Gambit
-<Spell
-    author='Clement446'
-    glyphs={["ray","aoe","sensitive","chain","burst","sensitive","amplify","amplify","reset","blink"]}
-    description='You create a ball of thunder ahead of you, before teleporting in the middle of the thunderstorm.'
-    versions={["1.20.1"]}
-    addons={["tmg", "neg"]}
-/>
-
-## Block Missile Launcher
-<Spell
-    author='Darkfira'
-    glyphs={["touch","sensitive","place_block","leap","amplify","delay","snare","break","amplify","pickup"]}
-    description='*REQUIRES FOCUS OF BLOCK SHAPING* 
-Launches a single block in the direction you are facing dealing damage based on block hardness. You can replace "Place Block" with "Conjure Mageblock" and remove everything from delay onwards if you do not wish to use a specific block.'
-    versions={["1.16.5","1.18.2","1.20.1","1.19.2"]}
-/>
-
-## New Fireball
-<Spell
-    author='Clement446'
-    glyphs={["projectile","burst","sensitive","aoe","aoe","flare","amplify","amplify","reset","explosion"]}
-    description='A &quot;new&quot; version of the Fireball spell.
-It uses the &quot;reset&quot; glyph to include the &quot;Explode&quot; glyph without causing much destruction.'
-    versions={["1.20.1"]}
-/>
-
-## Electrifying Water
-<Spell
-    author='Danicus'
-    glyphs={["projectile","burst","sensitive","conjure_water","delay","evaporate","reset","lightning","amplify","amplify"]}
-    description='With this spell you will briefly envelop the target in water, exposing it to the power of lightning.'
-    versions={["1.20.1"]}
-/>
-
-## Embrace of the Depths
-<Spell
-    author='Danicus'
-    glyphs={["projectile","burst","sensitive","conjure_water","aoe","reset","watery_grave","extend_time","extend_time","extend_time"]}
-    description='The target of this spell is submerged in the water, suffocating until succumbing.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Wither and Bloom
-<Spell
-    author='MuteTiefling'
-    glyphs={["chaining","pierce","pierce","aoe","aoe","harm","envenom","envenom","poison_spores","amplify 3"]}
-    description='Used on an Enchanter&apos;s Sword with a Focus of Earth and Geomancer&apos;s Armor with Spores I applied.'
-    versions={["1.19.2"]}
-    addons={["tmg","elemental"]}
-/>
-
-## Hellish Ray
-<Spell
-    author='Clement446'
-    glyphs={["self","wall","aoe","aoe","sensitive","propagate_self","propagate missile","ignite","flare","heal"]}
-    description='Creates a beam of missiles going from yourself, dealing great AOE damage.
-In certain Ars Elemental Versions, Ignite can be removed if you have the Kindling Thread at level three.
-Propagate Missile can be replaced with Propagate Projectile to have better range.'
-    versions={["1.20.1"]}
-    addons={["trinkets","elemental"]}
-/>
-
-## Eldritch Beam
-<Spell
-    author='Clement446'
-    glyphs={["self","burst","aoe","aoe","sensitive","propagate_self","propagate missile","harm","amplify","heal"]}
-    description='Creates a Beam of, harmful traveling from the caster&apos;s eyes to the position they are looking at.
-Using an Ignition Thread at level three will enable it to skip I-frames.'
-    versions={["1.20.1"]}
-    addons={["trinkets","elemental"]}
-/>
-
-## Minor Icicle
-<Spell
-    author='Clement446'
-    glyphs={["touch","sensitive","conjure_water","freeze","amplify","amplify","launch","leap","amplify","amplify"]}
-    description='Launch a block of ice at the target.
-Requires the Blockshaper Focus.'
-    versions={["1.20.1","1.19.2"]}
-/>
-
-## Wrath of God
-<Spell
-    author='Eggovolt'
-    glyphs={["projectile","pierce","linger","sensitive","aoe","propagate_arc","split","explosion","aoe","lightning"]}
-    description='The People&apos;s Nuke; a low-addon spell that creates a centralized explosion from which many, many projectiles rain down over the course of about 6 seconds. All of these spawn lightning. Very flashy and good if you don&apos;t mind terrain destruction.'
-    versions={["1.18.2"]}
-    addons={["elemental"]}
-/>
-
-## Eviscerate
-<Spell
-    author='SirDragonBlaster'
-    glyphs={["touch","blink","ignite","wind_shear","heal","wind_shear","heal","wind_shear","heal","wind_shear"]}
-    description='Use with a warp scroll bound to around y 300,000 in your offhand. Can one tap just about anything, but it is kinda pointless for PvE, as you don&apos;t get drops. Works best if you first use hex. Requires thread of kindling 3 or a fire focus.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
+<CategorySubmissions category={"aggressive"} />
