--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -4,133 +4,6 @@ description: "A list of Defensive Combat spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Wall of Stone
-<Spell
-    author='Lyrellion'
-    glyphs={["touch", "sensitive", "wall", "sensitive", "conjure_terrain", "amplify"]}
-    description='Create a permanent wall of stone to seal off a passage or build a wall.'
-    versions={["1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Black Hole
-<Spell
-    author='Lyrellion'
-    glyphs={["touch", "sensitive", "gravity", "sensitive", "aoe", "aoe", "aoe", "aoe", "aoe", "aoe"]}
-    description='Create a singularity that pulls entities towards it in a large area. Set color to (1, 1, 1) to make it nearly invisible. Requires Earth Focus.'
-    versions={["1.19.2", "1.20.1"]}
-    addons={["elemental"]}
-/>
-
-## Ice Field
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "conjure_water", "aoe", "aoe", "freeze", "spike", "snare", "extend_time", "extend_time"]}
-    description='Create an area of damaging spikes that snares enemies for a moderate duration.'
-    versions={["1.20.1"]}
-/>
-
-## Tiny Hut
-<Spell
-    author='Xacris'
-    glyphs={["underfoot","phantom_block","aoe","aoe","pierce","pierce","pierce"]}
-    description='Conjures a box of Mageblocks around you. Good spell to cast in a panic!'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Shadow Clones
-<Spell
-    author='Lyrellion'
-    glyphs={["underfoot", "wall", "sensitive", "propagate_arc", "split", "split", "summon_decoy", "extend_time", "extend_time", "extend_time"]}
-    description='Summon a crowd of decoys to distract enemies.'
-    addons={["elemental"]}
-    versions={["1.20.1"]}
-/>
-
-## Ring of Eviceration
-<Spell
-    author='ArborSolis'
-    glyphs={["orbit","accelerate","accelerate","accelerate","accelerate","accelerate","accelerate","accelerate","blink"]}
-    description='This spell creates a fast spinning ring of blink spells, that combined with an off-handed warp scroll can teleport any would be attackers to the set location. An easy way to dispatch of enemies with limited effort.
-
-Note: Warp scroll should be set to a place far away. Examples: In the void, a pit filled with hostile mobs, high up in the sky, etc..'
-    versions={["1.20.1"]}
-/>
-
-## Human Cannonball
-<Spell
-    author='Darkfira'
-    glyphs={["touch","launch","amplify","amplify","amplify","delay","gust","amplify","amplify","explosion"]}
-    description='Send Melee attackers flying in a fun way!'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Wards of Distance
-<Spell
-    author='Danicus'
-    glyphs={["self","orbit","split","split","split","gust","amplify","delay","snare","extend_time"]}
-    description='You conjure a cohort of magical orbs that will repel and contain those who dare approach you.'
-    versions={["1.20.1"]}
-/>
-
-## Explosive Reciprocity
-<Spell
-    author='Danicus'
-    glyphs={["self","explosion","dampen","amplify","amplify","aoe","aoe","aoe","aoe","aoe"]}
-    description='A spell meant to be inscribed on reactive armor, it releases an explosion around its wearer upon taking damage, pushing and lacerating enemies around it, without devastating the terrain.'
-    versions={["1.20.1"]}
-/>
-
-## Vengeful Curse
-<Spell
-    author='Danicus'
-    glyphs={["retaliate","life_link","hex","amplify","amplify","wither","amplify","amplify"]}
-    description='Vengeful spell to inscribe in reactive armor, curses the attacker to wither, weakening against magic and sharing the wearer&apos;s pain.'
-    versions={["1.20.1"]}
-    addons={["additions","elemental"]}
-/>
-
-## Restoration of One
-<Spell
-    author='Danicus'
-    glyphs={["self","dispel","heal","amplify"]}
-    description='Restorative spell, intended to be inscribed in reactive armor, restores the wearer&apos;s condition, stitching wounds and purging effects.'
-    versions={["1.20.1"]}
-/>
-
-## Shield
-<Spell
-    author='Lyrellion'
-    glyphs={["underfoot","phantom_block","aoe","aoe","pierce","pierce","pierce","duration_down","duration_down"]}
-    description='A modified version of Xacris&rsquo; Tiny Hut, designed for use in combat. Creates a protective dome of mageblocks around you for a moment to block an incoming projectile or attack before dissipating..'
-    versions={["1.20.1"]}
-/>
-
-## Fire Rune
-<Spell
-    author='Lyrellion'
-    glyphs={["touch","rune","hex","ignite","flare"]}
-    description='Place a defensive rune on a wall or floor that will trigger when an enemy touches it. Use directly in combat as a damage dealing spell or use Runic Chalk to make permanent and place a source jar nearby to make an effective base defense.'
-    versions={["1.20.1"]}
-/>
-
-## Wall of Force
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile","accelerate","wall","sensitive","phantom_block","pierce","amplify"]}
-    description='Create a permanent wall of mageblocks at the point of impact.'
-    versions={["1.20.1"]}
-/>
-
-## Schroedinger's Mage Bubble
-<Spell
-    author='Clement446'
-    glyphs={["self","burst","dampen","sensitive","phantom_block","reset","blink","dampen","dampen","invisibility"]}
-    description='Use Case : PVP
-Type : Mixup
-Should be used as a mixup to the traditional Mageblock Sphere.
-Are you in the mage bubble or not? That is the question that your enemy will ask himself.'
-    versions={["1.20.1"]}
-/>
+<CategorySubmissions category={"defensive"} />
