--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -4,74 +4,6 @@ description: "A list of Support Combat spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Animate Objects
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "chain", "animate_block", "extend_time"]}
-    description='Turn a chunk of terrain into an army of followers.'
-    versions={["1.20.1"]}
-    addons={["tmg", "neg"]}
-/>
-
-## Blocked Host
-<Spell
-    author='Danicus'
-    glyphs={["touch","sensitive","phantom_block","aoe","aoe","animate_block"]}
-    description='With Focus of Block Shaping, summon a host of loyal blocks, an environment-friendly spell.'
-    versions={["1.20.1"]}
-/>
-
-## Telekinesis
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "accelerate", "filter_living", "exchange", "blink"]}
-    description='Pulls a distant creature to you.'
-    versions={["1.20.1"]}
-    addons={["tmg", "neg"]}
-/>
-
-## Unnoticed Escape
-<Spell
-    author='Danicus'
-    glyphs={["self","summon_decoy","extend_time","blink","amplify","amplify","invisibility","extend_time"]}
-    description='You teleport forward, becoming invisible and leaving behind a decoy to suffer the consequences.'
-    versions={["1.20.1"]}
-/>
-
-## Fire Jump
-<Spell
-    author='Clement446'
-    glyphs={["projectile","burst","sensitive","life_link","propagate homing","ignite","flare","heal","reset","blink"]}
-    description='This spell is based on the &quot;collapsing stars&quot; base.
-Tweak and adjust the augments as wished.
-The **FIRE FOCUS** or the **KINDLING THREAD** are required for this spell to work.
-When using the kindling thread, you can remove the &quot;Ignite&quot; glyph.'
-    versions={["1.20.1","1.19.2","1.18.2"]}
-    addons={["elemental"]}
-/>
-
-## Archers
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile","summon_undead","split","split","split","split","pierce","amplify","amplify","amplify"]}
-    description='Summon a squad of skeletons armed with enchanted bows to assist you in combat. Alternatively, replace the Pierce with an additional Amplify to get a squad of melee skeletons instead.'
-    versions={["1.20.1"]}
-/>
-
-## Instant Army
-<Spell
-    author='ence'
-    glyphs={["touch","wall","sensitive","aoe","accelerate","accelerate","extend_time","extend_time","phantom_block","animate_block"]}
-    description='Call forth a horde of soldiers to fight for you, or to just make getting to you challenging.'
-    versions={["1.19.2"]}
-/>
-
-## Terrible Web
-<Spell
-    author='ence'
-    glyphs={["projectile","burst","sensitive","aoe","aoe","aoe","rune","snare","gravity","extend_time"]}
-    description='Any hostile caught in the center of the web will not be moving for a while. Do mind the cleanup, though.'
-    versions={["1.19.2"]}
-/>
+<CategorySubmissions category={"support"} />
