--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -4,134 +4,6 @@ description: "A list of Utility spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Renovate
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "exchange", "aoe", "aoe", "pickup"]}
-    description='Replace a plane of blocks with blocks from your hotbar. Useful for replacing sections of walls/floors with a specific block. Can add additional AoEs for larger sections.'
-    versions={["1.20.1"]}
-/>
-
-## Mage Hand
-<Spell
-    author='Xacris'
-    glyphs={["projectile","sensitive","dispel","interact","redstone_signal","sensitive","duration_down","pickup","aoe"]}
-    description='A multi-purpose spell that can dispel, interact with buttons/levers and whatever else you need, activate redstone, and pickup items'
-    versions={["1.19.2","1.20.1"]}
-/>
-
-## Excavate
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "burst", "sensitive", "aoe", "aoe", "aoe", "aoe", "break", "extract", "pickup"]}
-    description='Mining spell that clears a massive area and places the drops into inventory. Recommended to carry a Jar of Voiding set to convert basic blocks.'
-    versions={["1.20.1"]}
-/>
-
-## Nightstalker
-<Spell
-    author='Lyrellion'
-    glyphs={["self", "light", "amplify", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time", "extend_time"]}
-    description='Grant long duration night vision to yourself. Replace Self with Touch to grant to another player.'
-    versions={["1.19.2", "1.20.1"]}
-/>
-
-## Floating Disc
-<Spell
-    author='Lyrellion'
-    glyphs={["underfoot", "phantom_block", "aoe", "aoe", "extend_time"]}
-    description='Cast while in the air to create a temporary floating platform.'
-    versions={["1.20.1","1.19.2"]}
-/>
-
-## Deluge
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile", "burst", "sensitive", "conjure_water"]}
-    description='Create Water in a large area. Add AOE glyphs after the Sensitive glyph to increase the volume.'
-    versions={["1.20.1"]}
-/>
-
-## Runic Return
-<Spell
-    author='Zieg777'
-    glyphs={["rune","exchange"]}
-    description='A simple tier 2 spell that acts as an ender pearl stasis chamber. If any mob or item triggers the rune, it will warp the player who placed it back to that spot'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Dome of Breathing
-<Spell
-    author='Danicus'
-    glyphs={["self","burst","sensitive","aoe","aoe","aoe","aoe","evaporate"]}
-    description='It evaporates all the liquid around, allowing you to breathe and move.'
-    versions={["1.20.1"]}
-/>
-
-## Illuminated Prospecting
-<Spell
-    author='Danicus'
-    glyphs={["projectile","pierce","pierce","light","break","aoe","aoe","pierce","pierce","pickup"]}
-    description='Launch a projectile that will voraciously excavate the earth in its path while illuminating it.'
-    versions={["1.20.1"]}
-/>
-
-## Charge
-<Spell
-    author='Lyrellion'
-    glyphs={["projectile","lightning","dampen","dampen"]}
-    description='Can be used to turn a creeper into a charged creeper without doing significant damage to them.'
-    versions={["1.20.1"]}
-/>
-
-## Tunnel
-<Spell
-    author='Darkfira'
-    glyphs={["projectile","pierce","pierce","pierce","break","amplify","aoe","aoe","pierce","pickup"]}
-    description='Tier 2 Mining spell. Creates a 3x3 Tunnel and picks it up. Replace pierce with Extract if required. Perfect for speeding along your diamond mining especially paired with a Jar of Voiding!'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Arborist's Fiend
-<Spell
-    author='WaveClaw'
-    glyphs={["touch","place_block","grow","grow","grow","fell","aoe","pickup"]}
-    description='While holding a sapling in your first inventory slot, cast to quickly grown and fell a forest of trees like the magical lumberjack you were always meant to be.'
-    versions={["1.20.1","1.19.2"]}
-/>
-
-## Fisher of Friends
-<Spell
-    author='WaveClaw'
-    glyphs={["projectile","accelerate","exchange","blink"]}
-    description='Pull a creature to you, even from deep in the void.  Size is not a limitation, make new friends today.'
-    versions={["1.19.2","1.20.1"]}
-/>
-
-## Isolating Bubble
-<Spell
-    author='Clement446'
-    glyphs={["projectile","burst","aoe","aoe","aoe","sensitive","dampen","phantom_block","amplify"]}
-    description='Creates a bubble of mageblocks around the enemy.
-Conjure mageblock can be replaced with place bock or conjure terrain.
-In forests or places with a lot of grass, using the Conjure Water glyph can be worth it.'
-    versions={["1.20.1","1.19.2"]}
-/>
-
-## Simple Mining
-<Spell
-    author='Pan Et Rosa'
-    glyphs={["projectile","break","aoe","aoe","aoe","aoe","pierce","pierce","pierce","extract","pickup"]}
-    description='A simple, inexpensive and highly effective spell for mining. Best used on a wand, allowing for another glyph slot which can be used to accelerate the projectile or expand the mined area. Testing in the Nether with an extended Scrying ritual produced over 2 stacks of ancient debris in 15 minutes, as well as several stacks of quartz ore and modded ores. Use with jar of voiding to replenish mana by deleting bulk blocks.'
-    versions={["1.20.1"]}
-/>
-
-## Noisy Detailing
-<Spell
-    author='Xacris'
-    glyphs={["projectile","exchange","randomize","aoe","pickup"]}
-    description='This deceptively simple spell will replace a 2x2 of blocks with a random selection from your hotbar, to add variation. To get the most out of this spell, get used to aiming between blocks rather than at blocks'
-    versions={["1.20.1","1.19.2"]}
-/>
+<CategorySubmissions category={"utility"} />
