--- a/src/content/spells/other/automation.mdx
+++ b/src/content/spells/other/automation.mdx
@@ -4,71 +4,6 @@ description: "A list of Automation spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Fall Assisted Runic Thermal Smelter
-<Spell
-    author='Zieg777'
-    glyphs={["rune","smelt","pierce","pierce","pierce","pierce","pierce","pierce","pierce"]}
-    description='Dropping items into the Smelt rune will smelt half a stack at a time. Stack two runes together to smelt a full stack as you toss them in. Works best when made permanent with chalk'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-/>
-
-## Return to Sender
-<Spell
-    author='Xacris'
-    glyphs={["touch","rune","sensitive","pickup"]}
-    description='This spell will place a rune that will teleport any items or XP orbs near it to the player that cast it when it is triggered. Can be used to remotely send things to you across vast distances'
-    versions={["1.19.2","1.20.1"]}
-/>
-
-## Ore Processing
-<Spell
-    author='Lyrellion'
-    glyphs={["touch","place_block"]}
-    description='Place on a turret facing an empty block with a second turret on the other side.  Place an inventory adjacent to the turret and fill with ore blocks.  Set up redstone automation as desired to activate the turret.'
-    versions={["1.20.1"]}
-/>
-
-<Spell
-    author='Lyrellion'
-    glyphs={["touch","delay","break","amplify","fortune","fortune","fortune","fortune","pickup"]}
-    description='Place on turret on opposite side of empty block facing the previous turret.  Place an inventory adjacent to the turret for deposit. Automate with redstone as desired.  For best results, place both turrets on a synchronized signal that can be turned on and off.'
-    versions={["1.20.1"]}
-/>
-
-## Berry Picker
-<Spell
-    author='Xacris'
-    glyphs={["touch","chain","aoe","grow","grow","interact","grow","grow","interact","pickup"]}
-    description='This spell is intended to be used by a turret to grow and harvest a field of up to 32 Source Berry plants at rapid speed'
-    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
-    addons={["tmg"]}
-/>
-
-## The Frozen Harvest
-<Spell
-    author='Danicus'
-    glyphs={["touch","chaining","aoe","aoe","conjure_water","freeze","aoe","break","extract","pickup"]}
-    description='Conjure water in front of you or a turret to quickly freeze it for a harvest of blue ice.'
-    versions={["1.20.1"]}
-    addons={["tmg"]}
-/>
-
-## Conjure Glass
-<Spell
-    author='WayofTime'
-    glyphs={["touch","conjure_terrain","aoe","aoe","crush","break","smelt","pickup"]}
-    description='Put this spell on a manipulation turret or use a shapers focus to conjure a 3x3 area of sand that is smelted and picked up.
-Put a chest or a storage lectern next to the turret to store the glass.'
-    versions={["1.20.1","1.19.2"]}
-    addons={["elemental"]}
-/>
-
-## Autoharvest
-<Spell
-    author='Multiple'
-    glyphs={["projectile","linger","sensitive","aoe","aoe","aoe","grow","grow","harvest","pickup"]}
-    description='Used to grow and harvest entire fields of crops in a single spell.  Target a slab or fence post in the center of the area you wish to harvest.  May be placed on a turret for easy automated harvesting and collection. '
-    versions={["1.20.1"]}
-/>
+<CategorySubmissions category={"automation"} />
