--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -4,37 +4,6 @@ description: "A list of Fun spells"
 weight: 0
 ---
 
-import Spell from '../../../components/Spell.astro'
+import CategorySubmissions from '../../../components/CategorySubmissions.astro'
 
-## Rocket Launch
-<Spell
-    author='Arin'
-    glyphs={["self","launch","launch","launch","launch","launch","launch","bounce","extend_time","extend_time"]}
-    description="Ever wanted to go to space and live the fall back down? Well now you can, for the simple price of your entire mana bar! (Mana cost exaggerated)<br/><br/><b>Note:</b> If you want to launch someone else out of the stratosphere use the touch form or projectile form<br/><b>Note:</b> This also works on blocks would not recommend shooting your storage system"
-    versions={["1.20.1"]}
-/>
-
-## Firework Display
-<Spell
-    author='Xacris'
-    glyphs={["projectile","wall","aoe","sensitive","firework","amplify","extend_time","extend_time","extend_time","extend_time"]}
-    description='Conjures a wall that will shoot fireworks into the sky! They fly higher than vanilla fireworks can, makes for an impressive display'
-    versions={["1.19.2","1.20.1"]}
-/>
-
-## Containment Swap
-<Spell
-    author='Xacris'
-    glyphs={["projectile","dispel","rune","exchange"]}
-    description='This spell, when cast at the top side of a containment jar, will release the contained creature and then you will swap places with it. Best used when cast through an Enchanter&apos;s Eye for remote casting. Leave in style by releasing a Warden!'
-    versions={["1.19.2","1.20.1"]}
-/>
-
-## Rain of Judgement
-<Spell
-    author='Marcielle'
-    glyphs={["projectile","burst","sensitive","chain","propagate_arc","explosion","aoe"]}
-    description='Continuous rain of explosions from the sky.'
-    versions={["1.20.1"]}
-    addons={["tmg","neg"]}
-/>
+<CategorySubmissions category={"fun"} />
