fix: remove getItem helper

--- a/src/content/kubejs/recipes/crush.mdx
+++ b/src/content/kubejs/recipes/crush.mdx
@@ -18,14 +18,12 @@ These recipes will affect the usage of <Glyph glyph="crush" /> on blocks and ite
 | `skip_block_place` | Whether Crush will effect this item when floating in the world |
 
 ```js
-const getItem = (item) => ({
-  item: item.startsWith("#") ? { tag: item.substring(1) } : { item },
-});
-
 ServerEvents.recipes(event => {
   event.custom({
     type: "ars_nouveau:crush",
-    input: getItem("minecraft:azure_bluet"),
+    input: {
+      item: "minecraft:azure_bluet",
+    },
     output: [
       {
         chance: 1.0,
