--- a/src/content/kubejs/recipes/enchantment.mdx
+++ b/src/content/kubejs/recipes/enchantment.mdx
@@ -15,10 +15,6 @@ weight: 810
 | `pedestalItems` | A list of items required on pedestals around the Enchanting Apparatus                                  |
 
 ```js
-const getItem = (item) => ({
-  item: item.startsWith("#") ? { tag: item.substring(1) } : { item },
-});
-
 ServerEvents.recipes(event => {
   event.custom({
     type: "ars_nouveau:enchantment",
@@ -26,13 +22,13 @@ ServerEvents.recipes(event => {
     level: 1,
     pedestalItems: [
       {
-        "item": getItem("#forge:storage_blocks/iron")
+        "item": { tag: "forge:storage_blocks/iron" }
       },
       {
-        "item": getItem("#forge:storage_blocks/iron")
+        "item": { tag: "forge:storage_blocks/iron" }
       },
       {
-        "item": getItem("#forge:storage_blocks/source")
+        "item": { tag: "forge:storage_blocks/source" }
       }
     ],
     sourceCost: 2000
