--- a/src/content/kubejs/tweaks/block_variant_fix.mdx
+++ b/src/content/kubejs/tweaks/block_variant_fix.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Block Variant Recipe Fix"
-description: "Dyanmically fixes recipes for block variants (slabs, stairs, walls)"
+title: "Block Variant Recipe Fixer"
+description: "Dynamically fixes recipes for block variants (slabs, stairs, walls)"
 weight: 810
 ---
 
