--- a/src/content/docs/spell_theory/iframes.mdx
+++ b/src/content/docs/spell_theory/iframes.mdx
@@ -6,39 +6,49 @@ weight: 900
 
 import Glyphs from '../../../components/Glyphs.astro'
 
-An "I-Frame" (short for invulnerability frame) refers to a short window during which an entity becomes invulnerable after being hit.
+An "I-Frame" (short for invulnerability frame, in reference to other popular games) refers to a short time window during which an entity becomes invulnerable after being hit.
+In Minecraft, during this window you are only partially invulnerable as only the highest damage taken will actually be registered and any damage source lower than it will be ignored.
 
 The default duration of an I-Frame is 11 ticks, which is approximately 0.55 seconds, except for certain effects such as poison that at higher level start to attack every tick.
 
 ## How do I-Frames impact designing spells?
 
-If an entity is hit with multiple damage sources at the exact same tick, then only the source with the highest damage will apply.
+If an entity is hit with multiple damage sources at the exact same tick, then only the source with the highest damage will apply. Since a spell resolve all its effect on the same tick, unless delay or other forms of propagation are used, you will have to consider this when using multiple damaging glyphs in succession or using the Enchanter's Sword.
 
-In the following spell <Glyphs glyphs={["touch", "harm", "amplify", "harm", "harm"]} />, only the damage from the <Glyphs glyphs={["harm", "amplify"]} /> will apply, and the other two harm glyphs will be wasted.
+In the following spell <Glyphs glyphs={["touch", "harm", "harm", "amplify", "harm"]} />, only the damage from the <Glyphs glyphs={["harm", "amplify"]} /> will apply, and the other two harm glyphs will be wasted.
+
+As another example, let's assume an Enchanter's Sword with 7 damage with a simple Harm <Glyphs glyphs={["harm"]} /> spell (5 damage by default with no boosts). As you hit a mob, only the sword will actually damage it, as the lower spell damage will be ignored. 
 
 ## How can I bypass I-Frames?
 
-In Ars Nouveau it's not possible to bypass I-Frames without an addon or another mod that allows the behaviour.
+In Ars Nouveau it's not possible to bypass I-Frames without an addon or another mod that allows the behaviour, but you can still use <Glyphs glyphs={["delay"]} /> to spread over time the damage instance and let all of them fully damage the enemy.
 
 Here are some methods that allow bypassing I-Frames depending on your mod list:
 
 ### Ars Elemental
 
 Ars Elemental is an incredibly popular Ars addon that adds a lot of new glyphs and effects themed around the elements.
+IFrame skip mechanics can be disabled by a config, and are entirely moved to Nullify glyph since 1.21.
 
-#### Hellfire
+### Nullify Defense
 
-Ars Elemental adds a new effect called Hellfire, this effect allows creatures that are immune to fire damage to be damaged by Fire Spells, but it also causes <Glyphs glyphs={["heal"]} /> to reset the damage immunity for the damaged entity.
+This glyph is disabled by default in the configs, and also have a recipe that can be enabled in the configs without the need of a datapack. It straight up reset the iframes of the entity hit, allowing to fully damage it right away. 1.21 Only
+
+#### Hellfire / Magefire
+
+Ars Elemental adds a new effect called Hellfire, this effect allows to trigger Flare even on fire immune entitites, but it also causes them to lose the temporary damage "immunity" whenever they are healed (by regen, <Glyphs glyphs={["heal"]} /> or other sources).
+In older versions it reduces healing, in newer it boost healing and reduces earth-related damage taken.
 
 Using this effect alongside a glyph like <Glyphs glyphs={["hex"]} /> allows you to half the healing they receive and add more damage on top.
 
-Hellfire can be applied in two ways, using a Fire Focus, or a Tier 3 Kindling thread. Once you have one of these equipped you'll need to cast <Glyphs glyphs={["ignite"]} /> to apply Hellfire to your target.
+Hellfire can be applied in two ways, equipping a Fire Focus and casting <Glyphs glyphs={["ignite"]} /> or having a Tier 3 Kindling thread on your armor and casting a damage glyph.
 
-#### Frozen
+#### Freeze / Frozen
 
-Ars Elemental adds another new effect called Frozen, this effect allows the glyph <Glyphs glyphs={["freeze"]} /> to reset the entities immunity frames.
+When the Water Focus is equipped and <Glyphs glyphs={["freeze"]} /> hit a mob with enough freezing buildup, it applies a new effect called Frozen for 11 ticks and reset the entities immunity frames.
+While the entity has this effect, it can't heal and  <Glyphs glyphs={["freeze"]} /> can't be used to reset iframes again.
 
-This happens once an entity is hit by Freeze and becomes fully frozen, which can be achieved faster using <Glyphs glyphs={["amplify"]} />.
+Freezing can buildup while inside powdered snow, affected by freezing (Chilling Thread), or by using Freeze with the Water Focus (even faster using <Glyphs glyphs={["amplify"]} />).
 
 ### Ars Trinkets
 
