fix: update styling for caster tomes, add fallback entries

--- a/src/content/spells/introduction/caster-tomes.mdx
+++ b/src/content/spells/introduction/caster-tomes.mdx
@@ -1,9 +1,13 @@
 ---
 title: "Caster Tomes"
 description: "A list of Caster Tome spells"
-weight: 0
+weight: 100
 ---
 
 import CasterTomes from '../../../components/CasterTomes.astro'
+
+Caster Tomes are books you can find around the world.
+
+These spells are provided by [Patreon Supporters](https://www.patreon.com/arsnouveau).
 
 <CasterTomes />
