--- a/src/content/docs/spell_theory/iframes.mdx
+++ b/src/content/docs/spell_theory/iframes.mdx
@@ -9,7 +9,7 @@ import Glyphs from '../../../components/Glyphs.astro'
 An "I-Frame" (short for invulnerability frame, in reference to other popular games) refers to a short time window during which an entity becomes invulnerable after being hit.
 In Minecraft, during this window you are only partially invulnerable as only the highest damage taken will actually be registered and any damage source lower than it will be ignored.
 
-The default duration of an I-Frame is 10 ticks, which is approximately 0.5 seconds, except for certain effects such as poison that at higher level start to attack every tick.  
+The default duration of an I-Frame is 10 ticks, which is approximately 0.5 seconds.  
 {/* You can verify this by using `/tick freeze`, punching a mob, `/tick step 9`, verifying that it is still invulnerable, `/tick step`, then verifying that it can now be attacked. */}
 
 ## How do I-Frames impact designing spells?
@@ -46,7 +46,7 @@ Hellfire can be applied in two ways, equipping a Fire Focus and casting <Glyphs 
 
 #### Freeze / Frozen
 
-When the Water Focus is equipped and <Glyphs glyphs={["freeze"]} /> hit a mob with enough freezing buildup, it applies a new effect called Frozen for 11 ticks and reset the entities immunity frames.
+When the Water Focus is equipped and <Glyphs glyphs={["freeze"]} /> hit a mob with enough freezing buildup, it applies a new effect called Frozen for 10 ticks and reset the entities immunity frames.
 While the entity has this effect, it can't heal and  <Glyphs glyphs={["freeze"]} /> can't be used to reset iframes again.
 
 Freezing can buildup while inside powdered snow, affected by freezing (Chilling Thread), or by using Freeze with the Water Focus (even faster using <Glyphs glyphs={["amplify"]} />).
